--- a/03_01_Loading_csv_files_into_dataframes.ipynb
+++ b/03_01_Loading_csv_files_into_dataframes.ipynb
@@ -43,7 +43,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
+          "height": 505
         },
         "outputId": "722072c2-a9e1-451f-b571-5dccaf9082fc"
       },
@@ -94,12 +94,48 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "iVSzfPCSppXB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 240
+        },
+        "outputId": "7bd5122a-415b-49b7-f997-cbeaae631911"
+      },
+      "source": [
+        "!ls\n",
+        "!pwd\n",
+        "!pip install pyspark"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "location_temp.csv  server_name.csv\t      spark-2.3.1-bin-hadoop2.7.tgz\n",
+            "sample_data\t   spark-2.3.1-bin-hadoop2.7  utilization.csv\n",
+            "/content\n",
+            "Collecting pyspark\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/9a/5a/271c416c1c2185b6cb0151b29a91fff6fcaed80173c8584ff6d20e46b465/pyspark-2.4.5.tar.gz (217.8MB)\n",
+            "\u001b[K     |████████████████████████████████| 217.8MB 60kB/s \n",
+            "\u001b[?25hCollecting py4j==0.10.7\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e3/53/c737818eb9a7dc32a7cd4f1396e787bd94200c3997c72c1dbe028587bd76/py4j-0.10.7-py2.py3-none-any.whl (197kB)\n",
+            "\u001b[K     |████████████████████████████████| 204kB 43.1MB/s \n",
+            "\u001b[?25hBuilding wheels for collected packages: pyspark\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "BFkqszE_o2yv",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "data_path = '/Users/danielsullivan/LinkedIn Learning/Spark SQL/data'"
+        "data_path = '/content'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -109,14 +145,30 @@
       "metadata": {
         "id": "KyVflfrGo2zQ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 182
+        },
+        "outputId": "83b0aa35-f8bb-4e03-cfdd-2279bff96a8a"
       },
       "source": [
         "file_path = data_path + \"/location_temp.csv\"\n",
         "df1 = spark.read.format(\"csv\").option(\"header\", \"true\").load(file_path)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-2e6f560a0f98>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfile_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_path\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"/location_temp.csv\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moption\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"header\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"true\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'read' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
