--- a/03_01_Loading_csv_files_into_dataframes.ipynb
+++ b/03_01_Loading_csv_files_into_dataframes.ipynb
@@ -98,7 +98,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 240
+          "height": 314
         },
         "outputId": "7bd5122a-415b-49b7-f997-cbeaae631911"
       },
@@ -107,7 +107,7 @@
         "!pwd\n",
         "!pip install pyspark"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +121,50 @@
             "\u001b[?25hCollecting py4j==0.10.7\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e3/53/c737818eb9a7dc32a7cd4f1396e787bd94200c3997c72c1dbe028587bd76/py4j-0.10.7-py2.py3-none-any.whl (197kB)\n",
             "\u001b[K     |████████████████████████████████| 204kB 43.1MB/s \n",
-            "\u001b[?25hBuilding wheels for collected packages: pyspark\n"
+            "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
+            "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyspark: filename=pyspark-2.4.5-py2.py3-none-any.whl size=218257927 sha256=0685e5512446ad40e54152b31e11ea3c55baaa1b4e6d36d9328eec14f7e678b8\n",
+            "  Stored in directory: /root/.cache/pip/wheels/bf/db/04/61d66a5939364e756eb1c1be4ec5bdce6e04047fc7929a3c3c\n",
+            "Successfully built pyspark\n",
+            "Installing collected packages: py4j, pyspark\n",
+            "Successfully installed py4j-0.10.7 pyspark-2.4.5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "shz70gyDqlJG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 225
+        },
+        "outputId": "f89eff6a-f64d-4176-cfe9-8e23dd4fc56b"
+      },
+      "source": [
+        "!ls\n",
+        "!python"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "location_temp.csv  server_name.csv\t      spark-2.3.1-bin-hadoop2.7.tgz\n",
+            "sample_data\t   spark-2.3.1-bin-hadoop2.7  utilization.csv\n",
+            "Python 3.6.9 (default, Nov  7 2019, 10:44:02) \n",
+            "[GCC 8.3.0] on linux\n",
+            "Type \"help\", \"copyright\", \"credits\" or \"license\" for more information.\n",
+            ">>> \n",
+            "KeyboardInterrupt\n",
+            ">>> \n",
+            "KeyboardInterrupt\n",
+            ">>> \n",
+            "KeyboardInterrupt\n",
+            ">>> ^C\n"
           ],
           "name": "stdout"
         }
@@ -139,6 +182,35 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "280NR6nXrcic",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "863cd7c0-6a11-48e2-c7f1-69527b4482b3"
+      },
+      "source": [
+        "\n",
+        "!cd spark-2.3.1-bin-hadoop2.7\n",
+        "!ls -a"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            ".\t location_temp.csv  spark-2.3.1-bin-hadoop2.7\n",
+            "..\t sample_data\t    spark-2.3.1-bin-hadoop2.7.tgz\n",
+            ".config  server_name.csv    utilization.csv\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
