--- a/03_01_Loading_csv_files_into_dataframes.ipynb
+++ b/03_01_Loading_csv_files_into_dataframes.ipynb
@@ -41,11 +41,11 @@
       "metadata": {
         "id": "hNE8peRho4m8",
         "colab_type": "code",
+        "outputId": "561dd301-dbcb-47b6-f4c9-ecd335f3bc67",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 505
-        },
-        "outputId": "722072c2-a9e1-451f-b571-5dccaf9082fc"
+          "height": 485
+        }
       },
       "source": [
         "!apt-get update\n",
@@ -54,37 +54,37 @@
         "!tar xf spark-2.3.1-bin-hadoop2.7.tgz\n",
         "!pip install -q findspark"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Get:1 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease [21.3 kB]\n",
-            "Get:2 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "Hit:3 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Get:4 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-            "Get:5 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/ InRelease [3,626 B]\n",
-            "Get:6 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic InRelease [15.4 kB]\n",
-            "Get:7 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
-            "Ign:8 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "Get:9 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic/main amd64 Packages [37.4 kB]\n",
-            "Get:10 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/ Packages [89.3 kB]\n",
-            "Ign:11 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Get:12 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [839 kB]\n",
-            "Hit:13 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:14 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Get:15 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic/main Sources [1,811 kB]\n",
-            "Get:16 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [1,372 kB]\n",
-            "Get:17 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [889 kB]\n",
-            "Get:18 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [44.6 kB]\n",
-            "Get:19 http://security.ubuntu.com/ubuntu bionic-security/multiverse amd64 Packages [8,213 B]\n",
+            "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/ InRelease [3,626 B]\n",
+            "\r0% [Connecting to archive.ubuntu.com (91.189.88.152)] [Waiting for headers] [1 \r0% [Connecting to archive.ubuntu.com (91.189.88.152)] [Waiting for headers] [Wa\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.152)\r                                                                               \rIgn:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.152)\r                                                                               \rIgn:3 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.152)\r                                                                               \rHit:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.152)\r                                                                               \rGet:5 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.152)\r                                                                               \rHit:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.152)\r                                                                               \rGet:7 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease [21.3 kB]\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [5 InRelease 37.3 kB/88.7 k\r0% [Waiting for headers] [5 InRelease 75.0 kB/88.7 kB 85%] [7 InRelease 14.2 kB\r0% [Release.gpg gpgv 564 B] [Waiting for headers] [5 InRelease 75.0 kB/88.7 kB \r                                                                               \rHit:8 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "Get:9 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/ Packages [89.3 kB]\n",
+            "Get:10 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "Get:13 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic InRelease [15.4 kB]\n",
+            "Get:14 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
+            "Get:15 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [839 kB]\n",
+            "Get:16 http://security.ubuntu.com/ubuntu bionic-security/multiverse amd64 Packages [8,213 B]\n",
+            "Get:17 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [44.6 kB]\n",
+            "Get:18 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [889 kB]\n",
+            "Get:19 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic/main amd64 Packages [37.4 kB]\n",
             "Get:20 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [59.0 kB]\n",
-            "Get:21 http://archive.ubuntu.com/ubuntu bionic-updates/multiverse amd64 Packages [12.6 kB]\n",
+            "Get:21 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic/main Sources [1,811 kB]\n",
             "Get:22 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [1,184 kB]\n",
-            "Get:23 http://archive.ubuntu.com/ubuntu bionic-backports/main amd64 Packages [8,286 B]\n",
-            "Get:24 http://archive.ubuntu.com/ubuntu bionic-backports/universe amd64 Packages [7,671 B]\n",
-            "Get:26 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic/main amd64 Packages [874 kB]\n",
-            "Fetched 7,529 kB in 3s (2,652 kB/s)\n",
+            "Get:23 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [1,372 kB]\n",
+            "Get:24 http://archive.ubuntu.com/ubuntu bionic-updates/multiverse amd64 Packages [12.6 kB]\n",
+            "Get:25 http://archive.ubuntu.com/ubuntu bionic-backports/main amd64 Packages [8,286 B]\n",
+            "Get:26 http://archive.ubuntu.com/ubuntu bionic-backports/universe amd64 Packages [7,671 B]\n",
+            "Get:27 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic/main amd64 Packages [874 kB]\n",
+            "Fetched 7,529 kB in 4s (1,767 kB/s)\n",
             "Reading package lists... Done\n"
           ],
           "name": "stdout"
@@ -96,34 +96,33 @@
       "metadata": {
         "id": "iVSzfPCSppXB",
         "colab_type": "code",
+        "outputId": "ff307e3b-6938-4d05-953f-56f800c94399",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 314
-        },
-        "outputId": "7bd5122a-415b-49b7-f997-cbeaae631911"
+          "height": 277
+        }
       },
       "source": [
         "!ls\n",
         "!pwd\n",
         "!pip install pyspark"
       ],
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "location_temp.csv  server_name.csv\t      spark-2.3.1-bin-hadoop2.7.tgz\n",
-            "sample_data\t   spark-2.3.1-bin-hadoop2.7  utilization.csv\n",
+            "sample_data  spark-2.3.1-bin-hadoop2.7\tspark-2.3.1-bin-hadoop2.7.tgz\n",
             "/content\n",
             "Collecting pyspark\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/9a/5a/271c416c1c2185b6cb0151b29a91fff6fcaed80173c8584ff6d20e46b465/pyspark-2.4.5.tar.gz (217.8MB)\n",
-            "\u001b[K     |████████████████████████████████| 217.8MB 60kB/s \n",
+            "\u001b[K     |████████████████████████████████| 217.8MB 62kB/s \n",
             "\u001b[?25hCollecting py4j==0.10.7\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e3/53/c737818eb9a7dc32a7cd4f1396e787bd94200c3997c72c1dbe028587bd76/py4j-0.10.7-py2.py3-none-any.whl (197kB)\n",
-            "\u001b[K     |████████████████████████████████| 204kB 43.1MB/s \n",
+            "\u001b[K     |████████████████████████████████| 204kB 41.9MB/s \n",
             "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-2.4.5-py2.py3-none-any.whl size=218257927 sha256=0685e5512446ad40e54152b31e11ea3c55baaa1b4e6d36d9328eec14f7e678b8\n",
+            "  Created wheel for pyspark: filename=pyspark-2.4.5-py2.py3-none-any.whl size=218257927 sha256=3217126ac619ea030943acaef36f36edb7f92fcae767f1543d0e33257494f0d5\n",
             "  Stored in directory: /root/.cache/pip/wheels/bf/db/04/61d66a5939364e756eb1c1be4ec5bdce6e04047fc7929a3c3c\n",
             "Successfully built pyspark\n",
             "Installing collected packages: py4j, pyspark\n",
@@ -138,37 +137,44 @@
       "metadata": {
         "id": "shz70gyDqlJG",
         "colab_type": "code",
+        "outputId": "a1d68500-8e33-4899-c9f3-c3d659377bfb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 225
-        },
-        "outputId": "f89eff6a-f64d-4176-cfe9-8e23dd4fc56b"
+          "height": 116
+        }
       },
       "source": [
         "!ls\n",
         "!python"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "location_temp.csv  server_name.csv\t      spark-2.3.1-bin-hadoop2.7.tgz\n",
-            "sample_data\t   spark-2.3.1-bin-hadoop2.7  utilization.csv\n",
+            "sample_data  spark-2.3.1-bin-hadoop2.7\tspark-2.3.1-bin-hadoop2.7.tgz\n",
             "Python 3.6.9 (default, Nov  7 2019, 10:44:02) \n",
             "[GCC 8.3.0] on linux\n",
             "Type \"help\", \"copyright\", \"credits\" or \"license\" for more information.\n",
-            ">>> \n",
-            "KeyboardInterrupt\n",
-            ">>> \n",
-            "KeyboardInterrupt\n",
-            ">>> \n",
-            "KeyboardInterrupt\n",
-            ">>> ^C\n"
+            ">>> "
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bgmNpBTKP1bp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import os\n",
+        "os.environ[\"SPARK_HOME\"] = \"/content/spark-2.3.1-bin-hadoop2.7\""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -188,18 +194,18 @@
       "metadata": {
         "id": "280NR6nXrcic",
         "colab_type": "code",
+        "outputId": "863cd7c0-6a11-48e2-c7f1-69527b4482b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
-        },
-        "outputId": "863cd7c0-6a11-48e2-c7f1-69527b4482b3"
+        }
       },
       "source": [
         "\n",
         "!cd spark-2.3.1-bin-hadoop2.7\n",
         "!ls -a"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,17 +223,17 @@
       "metadata": {
         "id": "KyVflfrGo2zQ",
         "colab_type": "code",
+        "outputId": "83b0aa35-f8bb-4e03-cfdd-2279bff96a8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 182
-        },
-        "outputId": "83b0aa35-f8bb-4e03-cfdd-2279bff96a8a"
+        }
       },
       "source": [
         "file_path = data_path + \"/location_temp.csv\"\n",
         "df1 = spark.read.format(\"csv\").option(\"header\", \"true\").load(file_path)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
